fix canvas color issue on mobile fix page scroll issue when menu click update Classyloader plugin

--- a/css/card.css
+++ b/css/card.css
@@ -2,11 +2,12 @@
 
 .card {
 	position: relative;
-	float: left;
+	/*float: left;*/
 	width: 46%;
 	height: 0;
 	margin: 2%;
 	padding-bottom: 32.2%;
+	z-index: 1;
 }
 
 .card__container {
