--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ a {color:#009ABB;text-decoration: none;display: inline-block;border-bottom: dott
     background-size: cover;
     background-position: center;
     height: 100vh;
-    padding: 15px 15px 5px 15px;
+    padding: 15px 0 5px 0;
 }
 
 #coverContent {
@@ -117,9 +117,9 @@ a {color:#009ABB;text-decoration: none;display: inline-block;border-bottom: dott
     color: #fff;
     margin: 0 auto;
     display: flex;
-    align-items:center;/*垂直置中*/
-    justify-content:center;/*左右置中*/
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items:center;/*左右置中*/
+    justify-content:space-between;/*上下間距*/
 }
 #coverContent #avatar {
     background: url("../img/avatar.jpg");
@@ -135,15 +135,19 @@ a {color:#009ABB;text-decoration: none;display: inline-block;border-bottom: dott
 
 #coverContent #menu {
     align-self: flex-end;
-    text-align: center;
+    /*text-align: center;*/
     width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
 }
 #coverContent #menu span {
-    display: inline-block;
+    display: block;
     text-align: center;
     box-sizing: border-box;
     padding-bottom:5px;
-    margin: 0 10px;
+    /*margin: 0 9px;*/
     cursor: pointer;
 }
 /*主要內容*/
@@ -155,10 +159,17 @@ a {color:#009ABB;text-decoration: none;display: inline-block;border-bottom: dott
 .section {padding: 1px 15px 15px 15px;width: 100%;}
 .section:nth-child(even) {background: #fdfdfd;}
 .sectionContent {max-width: 768px;margin: 0 auto}
-#skillContainer {width:100%;display: flex;flex-wrap: wrap;justify-content: space-around;max-width: 1200px;}
-.skill {width: 200px;opacity: 0}
+/*技能*/
+#skillContainer {
+    width:100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    max-width: 1200px;
+}
+.skill {width: 200px;height: 200px;overflow: hidden;display: none}
 .skill p {text-align: center;margin: 50px 0 -70px 0}
-.loader {width: 200px;height: 200px;}
+.loader {width: 100%;height: 100%;}
 /*經歷*/
 .cntl-triangle {
     display: inline-block;
@@ -169,15 +180,16 @@ a {color:#009ABB;text-decoration: none;display: inline-block;border-bottom: dott
 }
 .cntl-state:nth-child(odd) .cntl-triangle {
     border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent rgba(238,238,238,.60);
+    border-color: transparent transparent transparent #E3F3F6;
 }
 .cntl-state:nth-child(even) .cntl-triangle {
     border-width: 10px 10px 10px 0;
-    border-color: transparent rgba(238,238,238,.60) transparent transparent;
+    border-color: transparent #E3F3F6 transparent transparent;
     float: right;
 }
 .cntl-state p {text-align: justify;text-justify: inter-word;}
 /*作品*/
+#Works .content {display:flex;flex-wrap: wrap;justify-content:center}
 .meta__avatar {width: 40px}
 .card__container {z-index: 999}
 
@@ -266,15 +278,15 @@ a {color:#009ABB;text-decoration: none;display: inline-block;border-bottom: dott
     .cntl-state:nth-child(2n+1) .cntl-triangle, .cntl-state:nth-child(2n+2) .cntl-triangle {
         display: none;
     }
-
+    /*.skill {width:50%}*/
     .skill p {
         text-align: center;
         margin: 25% 0 -37% 0;
     }
-
-    .loader {
-        width: 100%;
-        height: 100%;
+}
+@media only screen and (max-width: 320px) {
+    #coverContent #menu span {
+        transform: scalex(0.85);
     }
 }
 @media print,
